# Radar_experiments

./: .gitignore  CMakeLists.txt  README.md  aruco.rviz  frames.launch  localize_gt.launch  make_aruco_map.launch  map_aruco_sotano_v1.txt  package.xml
cfg/: LidarFusion.cfg
cmake_modules/: FindG2O.cmake
launch/: aloam_odom.launch  concatenator.launch  fuse_radar_lidar.launch  generate_dataset.launch  gm_scan_merge.launch  launch.launch  localize_gt.launch  localize_lidar.launch  localize_radar.launch  localize_with_gt.launch  localize_with_gt_fritsche.launch  make_aruco_map.launch  make_ground_truth.launch  record_gt.launch  record_odom.launch  refine_gt.launch  view_sensors.launch
launch/mapping/: aloam.launch  mapping.launch  octomap_server.launch  save_maps.launch
launch/sensor_fusion/: create_2d_map.launch  fuse_radar_lidar.launch  fuse_radar_lidar_gt.launch
maps/: aruco_sigma_0.05.bt  corchopan_0.002.bt  corchopan_v2.bt  map_aruco_sotano_v1.txt  map_corchopan_v1.txt  map_ground_truth_aruco.txt  map_gt.txt  tunel2d_map4.yaml
octave/: get_stats.m  load_data.m  plot_radar_stats.m  process_data.m  process_data_2.m  process_points.m  stats_radar_points.m
rviz/: aloam.rviz  aruco.rviz  cluster.rviz  clustering.rviz  fuse_gm.rviz  fuse_sensors.rviz  fusion.rviz  generate_dataset.rviz  gmapping.rviz  lidar.rviz  odom.rviz  radar.rviz  refine_gt.rviz
scripts/: calculate_ground_truth.py  corcho_experiment_1.bash  corcho_experiment_2.bash  corcho_experiment_3.bash  corcho_experiment_4.bash  experiment_0.bash  experiment_1.bash  experiment_2.bash  experiment_3.bash  experiment_4.bash  experiment_5.bash  experiment_6.bash  experiment_7.bash  experiment_8.bash  experiment_batch.bash  experiment_batch_11.bash  experiment_batch_bags_27_nov.bash  experiments.bash  initial_pose_publisher.py  install_fusion_dependencies.sh  localize_gt_bag_fov30.bash  localize_lidar_bag_fov30.bash  localize_lidar_bag_fov40.bash  localize_radar_bag_fov40.bash  odometry_node.py  radar_stats.py  upo_odometry.py
src/: refine_gt.cpp
src/dbscan/: dbscan.cpp  dbscan.h  dbscan_lines.cpp  dbscan_lines.h  detected_line.cpp  detected_line.h  detected_line.hpp  line.cpp  line.hpp
src/generate_dataset/: save_radar_lidar.cpp
src/sensor_fusion/: lidar_radar_fusion.cpp  lidar_radar_fusion_basic_fusion.cpp  lidar_radar_fusion_dbscan.cpp  lidar_radar_fusion_gaussian_mixture.cpp  lidar_std_dev_node.cpp  math_utils.hpp
stats/: README.txt  stats_gt_0.txt
